fixed styling on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -259,7 +259,7 @@ img {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    padding: 0 10px;
+    padding: 0 auto;
     flex-grow: 1;
 }
 
@@ -392,10 +392,11 @@ img {
 .tech-second-row {
     display: flex;
     flex-direction: row;
+    margin-bottom: -10px;
 }
 
 .tech-icons-list li {
-    padding: 0 20px;
+    padding: 0 10px;
 }
 
 .tech-icon {
@@ -537,7 +538,7 @@ img {
     align-items: center;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
-    padding: 15px 10px;
+    padding: 15px 20px;
     grid-template-areas: 
     "header-logo contact-link"
     "header-nav header-nav";
@@ -661,7 +662,12 @@ img {
 /* contact form */
 
 .contact-page h2 {
-    margin-top: -20px;
+    margin: 10px;
+    margin-top: -30px;
+}
+
+.contact-page p {
+    margin: 10px; 
 }
 
 .contact-form {
@@ -834,9 +840,17 @@ img {
         z-index: -1;
     }
 
+    .tech-second-row {
+        margin-bottom: 0;
+    }
+
     .tech-icons-list {
         flex-direction: row;
     }
+
+    .tech-icons-list li {
+        padding: 0 20px;
+    }    
 
     .tech-icons-list ul li img {
         width: var(--icon-lg);
